# Darkstone-PS1-Tweaks

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
src/Backend/: CustomCode.hpp  File.hpp  Game.cpp  Game.hpp  Offset.cpp  Offset.hpp  Path.cpp  Path.hpp  Tweaks.cpp  Tweaks.hpp  Version.hpp
src/Common/: DstException.hpp  Software.hpp  Utility.hpp
src/FrontendQt/: AboutDialog.cpp  AboutDialog.ui  GuiPath.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  QtUtility.cpp  QtUtility.hpp  TopInfoWidget.cpp  TopInfoWidget.hpp  TopInfoWidget.ui  TweaksWidget.cpp  TweaksWidget.hpp  TweaksWidget.ui  TweaksWidgetSettings.cpp  TweaksWidgetSettings.hpp
src/FrontendQt/Resource/: DarkstonePS1Tweaks.rc  resources.qrc
src/FrontendQt/resources/: resources.qrc
